--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Lab5</title>
         <link href="/css/style.css" rel="stylesheet" type="text/css">
-        <script src="js/java.js"></script>
+        <script src="java.js"></script>
     </head>
     
     
